--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "isomorphic-dompurify": "^2.33.0",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.553.0",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "otpauth": "^9.4.1",
     "protobufjs": "^7.5.4",
     "qrcode": "^1.5.4",
